graphs, the dumb way